[package]
name = "rusty_roguelike"
version = "0.2.0"
authors = ["Herbert Wolverson <herberticus@gmail.com>"]
edition = "2018"

[dependencies]
rltk = { path = "../rltk_rs", features = ["serde"] }
rand = "0.7.0-pre.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
typetag = "0.1.3"
